--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "5.6.3",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   }
 }
